[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Trap.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Trap" type="Area2D"]
self_modulate = Color( 1, 1, 1, 0.392157 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0.0784314 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 24.0
margin_bottom = 24.0
color = Color( 1, 1, 1, 0.0784314 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_right = 8.0
margin_bottom = 8.0
color = Color( 1, 1, 1, 0.0392157 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 32.0
margin_right = 40.0
margin_bottom = 8.0
color = Color( 1, 1, 1, 0.0392157 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0.0392157 )

[node name="ColorRect6" type="ColorRect" parent="."]
margin_top = 32.0
margin_right = 8.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0.0392157 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20, 20 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Trap_body_entered"]
